syntax = "proto3";

package MyGame.Proto;

option csharp_namespace = "MyGame.Proto";
option cc_enable_arenas = true;

import "User.proto";
import "Entity.proto";

message MapCharacterEnterRequest
{
	int32 mapId = 1;
}

message MapCharacterEnterResponse
{
	int32 mapId = 1;
	repeated NCharacterInfo characters = 2;
}

message MapCharacterLeaveResponse
{
	int32 entityId = 1;
}

message MapEntitySyncRequest
{
    NEntitySync entitySync = 1;
}

message MapEntitySyncResponse
{
    repeated NEntitySync entitySyncs = 2;
}

message MapTeleportRequest
{
	int32 teleporterId = 1;
}